# TeamMofuMofu-Discord-Bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum  main.go
src/: main.rs
