[package]
name = "tmm-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
google-youtube3 = "5.0.4"
serde = "1.0.197"
serde_json = "1.0.115"
hyper = "0.14.28"
hyper-rustls = "0.25.0"
